@@ -18,6 +18,7 @@ Daniel Kahn Gillmor	dkg@fifthhorseman.net
 Elliott Mitchell
 Hironobu SUZUKI		hironobu@h2np.net
 Jan Suhr		jan@suhr.info
+Jeremy Drake		jeremydrake+gnuk@eacceleration.com
 Jonathan McDowell	noodles@earth.li
 Kaz Kojima		kkojima@rr.iij4u.or.jp
 Kenji Rikitake
